stop animate on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -602,6 +602,10 @@ video {
   left: 0px;
 }
 
+.left-2 {
+  left: 0.5rem;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -630,11 +634,6 @@ video {
   z-index: 10;
 }
 
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -645,6 +644,11 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -653,11 +657,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
 }
 
 .mb-2 {
@@ -682,26 +681,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
 }
 
 .line-clamp-2 {
@@ -764,6 +743,11 @@ video {
   width: 100%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .max-w-5xl {
   max-width: 64rem;
 }
@@ -800,6 +784,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
@@ -812,12 +800,22 @@ video {
   gap: 2rem;
 }
 
-.gap-10 {
-  gap: 2.5rem;
+.overflow-hidden {
+  overflow: hidden;
 }
 
-.gap-4 {
-  gap: 1rem;
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.text-clip {
+  text-overflow: clip;
 }
 
 .rounded-2xl {
@@ -832,28 +830,16 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .border {
   border-width: 1px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-\[\#E0E0E0\] {
@@ -861,29 +847,24 @@ video {
   border-color: rgb(224 224 224 / var(--tw-border-opacity));
 }
 
-.border-purple {
-  --tw-border-opacity: 1;
-  border-color: rgb(139 128 249 / var(--tw-border-opacity));
-}
-
-.border-red-dark {
-  --tw-border-opacity: 1;
-  border-color: rgb(211 27 17 / var(--tw-border-opacity));
-}
-
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(20 20 20 / var(--tw-border-opacity));
 }
 
-.bg-body {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 242 253 / var(--tw-bg-opacity));
+.border-purple {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 128 249 / var(--tw-border-opacity));
 }
 
 .bg-blue {
   --tw-bg-opacity: 1;
   background-color: rgb(169 222 249 / var(--tw-bg-opacity));
+}
+
+.bg-body {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 242 253 / var(--tw-bg-opacity));
 }
 
 .bg-green {
@@ -955,10 +936,6 @@ video {
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.p-0 {
-  padding: 0px;
 }
 
 .px-2 {
@@ -1110,53 +1087,8 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-blue-dark\/\[\.3\] {
-  --tw-shadow-color: rgb(17 121 175 / .3);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-green-dark\/\[\.3\] {
-  --tw-shadow-color: rgb(7 117 6 / .3);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-orange-dark\/\[\.3\] {
-  --tw-shadow-color: rgb(123 82 36 / .3);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-purple\/\[0\.3\] {
-  --tw-shadow-color: rgb(139 128 249 / 0.3);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-red-dark\/\[\.3\] {
-  --tw-shadow-color: rgb(211 27 17 / .3);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-yellow-dark\/\[\.3\] {
-  --tw-shadow-color: rgb(78 70 4 / .3);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-yellow-dark\/\[\.8\] {
-  --tw-shadow-color: rgb(78 70 4 / .8);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-yellow-dark\/\[\.5\] {
-  --tw-shadow-color: rgb(78 70 4 / .5);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-yellow-dark\/\[\.4\] {
-  --tw-shadow-color: rgb(78 70 4 / .4);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-red-dark\/\[\.4\] {
-  --tw-shadow-color: rgb(211 27 17 / .4);
+.shadow-blue-dark\/\[\.4\] {
+  --tw-shadow-color: rgb(17 121 175 / .4);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1165,23 +1097,23 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-blue-dark\/\[\.4\] {
-  --tw-shadow-color: rgb(17 121 175 / .4);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .shadow-orange-dark\/\[\.4\] {
   --tw-shadow-color: rgb(123 82 36 / .4);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-black\/\[\.8\] {
-  --tw-shadow-color: rgb(20 20 20 / .8);
+.shadow-purple\/\[0\.3\] {
+  --tw-shadow-color: rgb(139 128 249 / 0.3);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-black\/\[\.5\] {
-  --tw-shadow-color: rgb(20 20 20 / .5);
+.shadow-red-dark\/\[\.4\] {
+  --tw-shadow-color: rgb(211 27 17 / .4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-yellow-dark\/\[\.4\] {
+  --tw-shadow-color: rgb(78 70 4 / .4);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1212,14 +1144,6 @@ video {
   transition-timing-function: linear;
 }
 
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
 body {
   height: 1000px;
   overflow-x: hidden;
@@ -1248,21 +1172,6 @@ body {
 ::-webkit-scrollbar-thumb {
   background: #8b80f9;
   border-radius: 50px;
-}
-
-.hover\:translate-y-10:hover {
-  --tw-translate-y: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-y-10:hover {
-  --tw-translate-y: -2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-y-5:hover {
-  --tw-translate-y: -1.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:-translate-y-3:hover {
@@ -1360,17 +1269,21 @@ body {
 }
 
 @media (min-width: 1024px) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
+  .lg\:inset-20 {
+    inset: 5rem;
+  }
+
   .lg\:my-32 {
     margin-top: 8rem;
     margin-bottom: 8rem;
   }
 
-  .lg\:mt-32 {
-    margin-top: 8rem;
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .lg\:block {
+    display: block;
   }
 
   .lg\:grid-cols-3 {
@@ -1431,9 +1344,5 @@ body {
     --tw-scale-x: .9;
     --tw-scale-y: .9;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .xl\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
